Vermeide Map.of unter minSdk 24